# intelligent-banking-employee-browser

./: .eslintrc.js  .gitignore  NEXT_STEPS.md  PROJECT_PROPOSAL.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  TEST_RESULTS.md  TEST_SUMMARY.md  jest.config.js  package.json  test-page-smart-coach.html  test-page.html
config/: default.json  development.json  production.json
config/certs/: server.crt  server.key
resources/assets/branding/: .gitkeep
resources/icons/: .gitkeep
resources/models/: .gitkeep
scripts/: build-native.js  create-project-structure.sh  start.sh
src/features/campaign-generator/: campaign-generator-service.js
src/features/compliance-checker/: compliance-checker-service.js
src/features/email-assistant/: email-assistant-service.js
src/features/product-advisor/: product-advisor-service.js
src/features/smart-coach/: knowledge-base-loader.js  smart-coach-service.js
src/main/: api-server.js  main.js  window-manager.js
src/main/api/: router.js
src/main/api/routes/: health.js  (+8 more)
src/main/security/: certificate-pinning.js  csp-enforcer.js  origin-validator.js  security-manager.js
src/main/session/: session-manager.js  token-generator.js
src/native/rag-index/: binding.gyp
src/native/slm-runtime/: CMakeLists.txt  README.md  binding.gyp
src/native/slm-runtime/src/: slm_runtime.cc
src/preload/: preload.js
src/services/: embedding-service.js  rag-service.js  slm-service.js
src/utils/: certificate-generator.js  config.js  document-processor.js
test/integration/: api-test.js
test/unit/: native-modules-test.js  services-test.js
(+1 files in other folders)
